--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "type": "module",
   "private": true,
   "main": "index.ts",
+  "bin": {
+    "mcp-jq": "./index.ts"
+  },
   "files": [
     "index.ts",
     "lib/**/*",
